@@ -13,6 +13,7 @@ Changes after 2.6.11:
 - I/O Devices
   - Added "multiple NICs" support to the NE2000 and E1000 devices. Up to 4 devices
     per model are supported. Use the zero-based "card" parameter to specify device.
+  - Added log file support to 'bxhub' utility (networking module 'socket').
   - VGA: Removed lfb_enabled switch from Bochs VBE code. Now banked and LFB writes
     to VRAM are always valid. Fixes GRUB bootloader menu when using Bochs VBE.
   - VGA DDC: Added "ddc" parameter to the "vga" option to make it possible
